--- a/rl-flashcard.css
+++ b/rl-flashcard.css
@@ -9,3 +9,9 @@
 .list-group {
     border-top:1px;
 }
+
+.text-timer {
+    font-size: 16pt;
+    font-family: 'Audiowide', cursive; 
+    text-align: center;
+}
