--- a/rl-flashcard.css
+++ b/rl-flashcard.css
@@ -16,8 +16,15 @@
     text-align: center;
 }
 
-.navbar-user-img {
-    height: 30px;
-    max-height: 30px;
+#userbox-container {
+    margin-top: 5px;
+    height: 150px;
+    width: 300px;
 }
 
+.userbox-image {
+    background-position: center;
+    background-size: cover;
+    height: 75px;
+    width: 75px;
+}
