--- a/rl-flashcard.css
+++ b/rl-flashcard.css
@@ -18,8 +18,8 @@
 
 #userbox-container {
     margin: 15px;
-    height: 100px;
-    width: 100px;
+    height: 10vh;
+    width: 10vh;
     position: relative;
     top: 0;
     left: 0;
@@ -44,4 +44,5 @@
     top: 75%;
     left: 30%;
     min-width: 200%;
+    border-radius: 0;
 }
